--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,18 +4,9 @@
   "icons": [
     {
       "src": "spacex.png",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/png"
-    },
-    {
-      "src": "spacex.png",
       "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "spacex.png",
-      "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "512x512",
+      "purpose": "any maskable"
     }
   ],
   "start_url": ".",
